# CMakeTestPrj

./: .gitignore  CMakeLists.txt  README.md  header.h  main.cpp  src.cpp
CMake/: CMakeLists.txt
CMake/MathFunctions/: CMakeLists.txt
MathFunctions/: MathFunctions.cpp  MathFunctions.h
cmake_test_add_all_file_once/: CMakeLists.txt
cmake_test_add_all_file_once/hello/: CMakeLists.txt  hello.cpp
cmake_test_add_all_file_once/world/: world.cpp
cmake_test_call_static_lib/src/: main.cpp  src.cpp
cmake_test_call_static_lib/window/: readme.txt
cmake_test_install/: CMakeList.txt  CMakeLists.txt  License.txt  main.cpp  mylib.cpp  mylib.h
header/: header.h
src/: main.cpp
